# xdg-launch

./: .gitignore  .indent.pro  AUTHORS  AUTHORS.in  ChangeLog  Makefile.am  NEWS  NEWS.in  README  README.in  README.md  README.md.in  RELEASE  RELEASE.md  THANKS  THANKS.in  TODO  TODO.in  autogen.sh  configure.ac  configure.sh  configure.template  dmenu_apps  dmenu_launch  dmenu_launch.desktop  dmenu_launch.pod  gennews.sh  index.md  rebuild.sh  xde-keys.c  xde-theme.c  xde-theme.pod  xdg-assist.c  xdg-assist.pod  xdg-autostart  xdg-autostart.pod  xdg-launch.c  xdg-launch.desktop  xdg-launch.man  xdg-launch.man.in  (+8 more)
data/: Makefile.am  prefapps.list  preferred-calculator.desktop  preferred-execute.desktop  preferred-file-manager.desktop  preferred-mail-reader.desktop  preferred-terminal.desktop  preferred-text-editor.desktop  preferred-web-browser.desktop  xdg-assist.desktop  xdg-monitor.desktop
man/: Makefile.am  dmenu_launch.pod  xdg-assist.pod  xdg-autostart.pod  xdg-entry.pod  xdg-find.pod  xdg-icon.pod  xdg-launch.pod  xdg-list.pod  xdg-monitor.pod  xdg-prefs.pod  xdg-session.pod  xdg-show.pod  xdg-startup.pod  xdg-toolwait.pod  xdg-types.pod  xdg-whereis.pod  xdg-which.pod  xdg-xsession.pod
src/: Makefile.am  xdg-assist.c  xdg-autostart  xdg-entry  xdg-find.c  xdg-launch.c  xdg-list.c  xdg-monitor.c  xdg-prefs.c  xdg-session  xdg-show.c  xdg-startup  xdg-toolwait  xdg-types.c  xdg-which.c  xdg-xsession
