
dist_applications_DATA = \
	dmenu_launch.desktop \
	xdg-launch.desktop \
	xdg-assist.desktop \
	preferred-calculator.desktop \
	preferred-execute.desktop \
	preferred-file-manager.desktop \
	preferred-mail-reader.desktop \
	preferred-terminal.desktop \
	preferred-text-editor.desktop \
	preferred-web-browser.desktop \
	prefapps.list


dist_autostart_DATA = \
	xdg-assist.desktop

